
Slick 7.x-2.0-dev, 2015-4-29
----------------------------
Issue #2479117 by fragtom: Fade option is not compatible with slidesToShow > 1.
  Added meaningful info to the Fade option to avoid issue with multiple items.

Slick 7.x-2.0-dev, 2015-4-25
----------------------------
Issue #2477507 by sashken2: Original image for Colorbox display is ignored.

Slick 7.x-2.0-dev, 2015-4-24
----------------------------
Issue #2477065: jQuery.easing requirements
  Added more information at README.txt to rename jquery.easing.1.3.js to
  jquery.easing.min.js.
Fixed trivial spaces at slick.api.php.

Slick 7.x-2.0-dev, 2015-4-14
----------------------------
Fixed typo at slick.api.php.
Fixed edge cases Media Youtube, Vimeo, Soundcloud disabled while being used.
Fixed edge case Picture module disabled while being used by Slick.
Added a simple coded slick example to slick.api.php.
Added slick_build() to simplify building a slick programatically.

Slick 7.x-2.0-dev, 2015-4-11
----------------------------
Issue #2466073 by gausarts: Use data-slick to store options.
  Be sure to clear cache, or re-generate JS if aggregation is on.
Issue #2466327 by rHOnDO: Allow alterable caption HTML tags.
Added slick_filter_xss_admin() to ease up extending allowed tags restrictively
  which can be set using variable_set('slick_allowed_tags', $allowed_tags).
  Be sure to clear cache.
Fixed slick_example hook_views_api() api version from Bulk exporter.
Updated slick.load.devel.js to test the options using data-slick.

Slick 7.x-2.0-dev, 2015-4-6
---------------------------
Updated slick.load.min.js slide--current class to reflect the new grid option.
Added info to Slick Views about the difference between Module grid and the
  library grid. The module Grid feature has been around before the Slick library
  officiallly supported it at Slick 1.5.
Added options for builtin Grid system: rows and slidesPerRow.
Updated the verticalScrolling option to verticalSwiping. Be sure to re-save it